--- a/Bogdanov.SqlAnalyzerLib/Bogdanov.SqlAnalyzerLib.csproj
+++ b/Bogdanov.SqlAnalyzerLib/Bogdanov.SqlAnalyzerLib.csproj
@@ -6,4 +6,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.10" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
+    <PackageReference Include="Oracle.EntityFrameworkCore" Version="5.21.3" />
+  </ItemGroup>
+
 </Project>
