Сделал описание для приложения.

--- a/Bogdanov.SqlAnalyzerConsole/Bogdanov.SqlAnalyzerConsole.csproj
+++ b/Bogdanov.SqlAnalyzerConsole/Bogdanov.SqlAnalyzerConsole.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\Bogdanov.SqlAnalyzerLib\Bogdanov.SqlAnalyzerLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="Description.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
